# albert-data-collections

./: .env.example  .gitignore  README.md  cron_config.txt  daily_update.sh  main.py  pyproject.toml  update_collections_dict.sh  utils.py
config/: __init__.py  config.py  data_gouv_search_config.json
data/: data_gouv_search_collections.json
